# GPMPC

./: .gitignore  CMakeLists.txt  README.md
include/model/: cartesian_augmented.hpp  kinematic_cartesian.hpp  model_interface.hpp  model_list.hpp
src/model/: cartesian_augmented.cpp  kinematic_cartesian.cpp  model_interface.cpp
src/pyGPR/: exact_gp.py  note.md  sparse_dtc_gp.py  sparse_fitc_gp.py  test.py  utils.py
src/test/: env_test.cpp  model_test.cpp
